solc_ossfuzz_seed_corpus/test_solidity/test_bb8619cfdfb9058955a8dd1080a5773ac58bacd4bfe0dd2ea60e6c7ad3bff290_096c4e9e7c3773d01aae31418227c0e0ffd34283_sol.sol
==== Source:  ====

==== Source: su0.sol ====
error er0(address payable ep0);
library L0 {
  int48 public constant cons0 = int48(0);
  function f0() public    returns(bool o0)
  {
    for(    0;
;
)
    {
      if (false)
      {
      }
      else if (false)
      {
        if (true)
        {
          do
          {
            continue;
          }
          while (true);
        }
        break;
      }
      else
      {
        break;
      }
    }
  }
  function f1() internal    returns(int32 o0)
  {
  }
  uint104 public constant cons1 = uint104(((((((uint104(1159482642268479855355251870050) ^ uint104(0)) * uint104(0)) | uint104(0)) ** uint232(uint232(4986176988841558542640339456191984856130377618300440231048892870961817))) | uint104(14696309807712576628905274629137)) / uint104(0)));
  modifier m0(int56 i0,uint208 i1) 
  {
    _;
  }
  event ev0();
  error er1(uint24 ep0);
  modifier m1(int184 i0) 
  {
    _;
    for(    function (address, int80) external   returns (int200) l0;
;
bytes21(0xffffffffffffffffffffffffffffffffffffffffff))
    {
      _;
    }
  }
}
pragma solidity >= 0.0.0;
type T0 is address;
contract C0 {
  event ev1(bytes21[]  ep0, T0 indexed ep1);
  modifier m2() 
  {
    assembly
    {
    }
    _;
  }
  function f2() public  m2() payable returns(int112 o0,address payable o1)
  {
    T0 l0 = T0.wrap(address(0x0000000000000000000000000000000000000006));
  }
  type T1 is bool;
  function f3(address i0,C0.T1 i1) public virtual m2()  returns(bytes26 o0,bool o1)
  {
  }
  event ev2(function () external    ep0, bytes21[]  ep1, address indexed ep2, uint64  ep3);
  bool immutable  s0 = false;
  int112   s1 = int112(0);
  uint56 immutable public s2 = uint56(0);
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42
  }
  enum EN1 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10
  }
  function f4(int136 i0) external  m2() 
  {
    return;
    return;
    return;
    assembly
    {
      let al0 := s1
    }
  }
  bytes11 public constant cons2 = (bytes11(0xb454eab99a808e98113bd3) & (true ? (bytes11(0xc4f00bff525b4db4fbc972) ^ bytes11(0xffffffffffffffffffffff)) : bytes11(0xffffffffffffffffffffff)));
  using L0 for *;
}
// ----
// Warning 3149: (su0.sol:517-694): The result type of the exponentiation operation is equal to the type of the first operand (uint104) ignoring the (larger) type of the second operand (uint232) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 1408: (su0.sol:2091-2093): Only local variables are supported. To access storage variables, use the ".slot" and ".offset" suffixes.
